--- a/metrics_comparison.ipynb
+++ b/metrics_comparison.ipynb
@@ -97,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "cab5cc97-131b-4ceb-bafc-d366f0afdf60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('code_completion_output.csv')"
+    "dataset = pd.read_csv('data/code_completion_output.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "6f195efd-0cb1-4d35-9c1e-504e11400d69",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "4          elif response.status_code == 200:\\n   ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2467,44 +2467,44 @@
     }
    ],
    "source": [
-    "# # Placeholder for manual scores\n",
-    "# manual_scores = []\n",
+    "# Placeholder for manual scores\n",
+    "manual_scores = []\n",
     "\n",
-    "# # Iterate over each row in the dataset\n",
-    "# for idx, row in dataset.iterrows():\n",
-    "#     print(f\"Instance {idx + 1}\")\n",
-    "#     print(\"File Path:\", row['file_path'])\n",
+    "# Iterate over each row in the dataset\n",
+    "for idx, row in dataset.iterrows():\n",
+    "    print(f\"Instance {idx + 1}\")\n",
+    "    print(\"File Path:\", row['file_path'])\n",
     "    \n",
-    "#     # Display Actual Code (middle) and Generated Code\n",
-    "#     actual_code = row['middle']\n",
-    "#     generated_code = row['generated_code']\n",
+    "    # Display Actual Code (middle) and Generated Code\n",
+    "    actual_code = row['middle']\n",
+    "    generated_code = row['generated_code']\n",
     "    \n",
-    "#     print(\"\\nActual Code (middle):\\n\", actual_code)\n",
-    "#     print(\"\\nGenerated Code:\\n\", generated_code)\n",
+    "    print(\"\\nActual Code (middle):\\n\", actual_code)\n",
+    "    print(\"\\nGenerated Code:\\n\", generated_code)\n",
     "    \n",
-    "#     # Prompt for manual score input\n",
-    "#     score = input(\"Enter your score for similarity (0 = no similarity, 0.5 = some similarity, 1 = almost correct or exact): \")\n",
+    "    # Prompt for manual score input\n",
+    "    score = input(\"Enter your score for similarity (0 = no similarity, 0.5 = some similarity, 1 = almost correct or exact): \")\n",
     "    \n",
-    "#     # Append score to list\n",
-    "#     try:\n",
-    "#         score = float(score)\n",
-    "#         if score in {0, 0.5, 1}:\n",
-    "#             manual_scores.append(score)\n",
-    "#         else:\n",
-    "#             print(\"Invalid input. Score must be 0, 0.5, or 1.\")\n",
-    "#             break\n",
-    "#     except ValueError:\n",
-    "#         print(\"Invalid input. Please enter a numeric score of 0, 0.5, or 1.\")\n",
-    "#         break\n",
+    "    # Append score to list\n",
+    "    try:\n",
+    "        score = float(score)\n",
+    "        if score in {0, 0.5, 1}:\n",
+    "            manual_scores.append(score)\n",
+    "        else:\n",
+    "            print(\"Invalid input. Score must be 0, 0.5, or 1.\")\n",
+    "            break\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a numeric score of 0, 0.5, or 1.\")\n",
+    "        break\n",
     "    \n",
-    "#     # Divider for readability\n",
-    "#     print(\"-\" * 80, \"\\n\")\n",
+    "    # Divider for readability\n",
+    "    print(\"-\" * 80, \"\\n\")\n",
     "\n",
-    "# # Add scores to the dataset\n",
-    "# dataset['manual_score'] = manual_scores\n",
+    "# Add scores to the dataset\n",
+    "dataset['manual_score'] = manual_scores\n",
     "\n",
-    "# # Save the dataset with scores for later analysis\n",
-    "# dataset.to_csv('evaluated_code_completion_output.csv', index=False)"
+    "# Save the dataset with scores for later analysis\n",
+    "dataset.to_csv('data/evaluated_code_completion_output.csv', index=False)"
    ]
   },
   {
@@ -2727,7 +2727,7 @@
     "eval_df['ChrF'] = chrf_scores\n",
     "\n",
     "# Save updated DataFrame to a new CSV\n",
-    "output_path = 'evaluated_code_completion_output_with_metrics.csv'\n",
+    "output_path = 'data/evaluated_code_completion_output_with_metrics.csv'\n",
     "eval_df.to_csv(output_path, index=False)"
    ]
   },
@@ -2746,7 +2746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_eval_df = pd.read_csv('evaluated_code_completion_output_with_metrics.csv')"
+    "full_eval_df = pd.read_csv('data/evaluated_code_completion_output_with_metrics.csv')"
    ]
   },
   {
